<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jboss.el</groupId>
  <artifactId>jboss-el</artifactId>
  <version>1.0_02.jakarta.bravura.2-SNAPSHOT</version>
  <description>JBoss EL is a extended EL implementation, distributed with Seam</description>
  
  
  <url>http://www.seamframework.org/Seam2</url>
  <licenses>
    <license>
        <name>GNU Lesser General Public License</name>
        <url>http://www.gnu.org/copyleft/lesser.txt</url>
    </license>
  </licenses>
  <scm>
    <connection>http://anonsvn.jboss.org/repos/jboss-el</connection>
    <developerConnection>http://svn.jboss.org/repos/jboss-el</developerConnection>
    <url>http://anonsvn.jboss.org/repos/jboss-el</url>
  </scm>
  <developers>
    <developer>
      <id>manaRH</id>
      <name>Marek Novotny</name>
      <organization>Red Hat</organization>
    </developer>
  </developers>
  
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
  
  <dependencies>
	<dependency>
	    <groupId>jakarta.el</groupId>
	    <artifactId>jakarta.el-api</artifactId>
	    <version>6.0.1</version>
	</dependency>
	<dependency>
	    <groupId>junit</groupId>
	    <artifactId>junit</artifactId>
	    <version>4.7</version>
	    <scope>test</scope>
	</dependency>
  </dependencies>
  
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <encoding>UTF-8</encoding>
          <compilerArgs>
            <arg>-Xlint:deprecation</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.3.1</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/martinhickson/jboss-el</url>
    </repository>
  </distributionManagement>
  
  <name>JBoss EL</name>
</project>
